# my_dig_data_contest

./: README.md  mcp_server.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: df_join_close_stores_grouped.csv  df_join_open_stores_drop_grouped.csv  mct_sample.csv
